--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,13 @@ attrs==23.1.0
 Babel==2.9.1
 certifi==2023.11.17
 charset-normalizer==3.3.2
+environs==9.5.0
 frozenlist==1.4.0
 idna==3.6
 magic-filter==1.0.12
+marshmallow==3.20.1
 multidict==6.0.4
+packaging==23.2
+python-dotenv==1.0.0
 pytz==2023.3.post1
 yarl==1.9.3
